# mDesk

./: .env  .env.example  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  ToDo.md  chat_autoexecute.rs  combine_files.sh  data_access_abstraction.md  fix_viewbox.sh  servers.json
.github/workflows/: rust.yml
assets/: mcp-client.css  mdesk.css
docs/: logging.md
docs/proposals/: standardized-testing.md
public/assets/: mdesk.css
scripts/: logging_analysis.sh  make_executable.sh
src/: index.html  lib.rs  logging.rs  main.rs  main.rs.new  server_config.rs
src/components/: chat.rs  message.rs  mod.rs  parameter_validation.rs  server_manager.rs  tool_manager.rs  tool_selection.rs  tool_selection_cache.rs  tool_suggestion.rs  tool_test.rs  validation_pipeline.rs
src/openrouter/: mod.rs
tests/: lib.rs
tests/component_tests/: parameter_validation_test.rs  server_manager_test.rs  tool_selection_cache_test.rs  tool_selection_test.rs  tool_suggestion_test.rs  validation_pipeline_test.rs
